src/objects/Bill_To_Ship_To__c.object
<CustomObject>
    <description>Ship To and Bill To site locations from Oracle database.  HnM has the ability to pick a site location when generating a quote for an opportunity.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bill Tos &amp; Ship Tos</relationshipLabel>
        <relationshipName>Bill_Tos_Ship_Tos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>IF(OR(Site_Use_Code__c = &quot;Bill To&quot;, Site_Use_Code__c = &quot;Bill_To&quot;, Site_Use_Code__c = &quot;BILL_TO&quot;),  BillingCity__c  ,  ShippingCity__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>IF(OR(Site_Use_Code__c = &quot;Bill To&quot;, Site_Use_Code__c = &quot;Bill_To&quot;, Site_Use_Code__c = &quot;BILL_TO&quot;), BillingCountry__c  ,  Shipping_Country__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Freight_Terms__c</fullName>
        <label>Customer Freight Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Inco_Terms__c</fullName>
        <label>Customer Inco Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <formula>Account__r.Oracle_Customer_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oracle_Price_List_Number__c</fullName>
        <label>Oracle Price List Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_List_Name__c</fullName>
        <label>Price List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Executive__c</fullName>
        <label>Sales Executive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingState__c</fullName>
        <label>Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingStreet__c</fullName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ShippingZipCode__c</fullName>
        <label>Shipping Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Number__c</fullName>
        <label>Site Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Use_Code__c</fullName>
        <label>Address Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Use_id__c</fullName>
        <externalId>true</externalId>
        <label>Site Use id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>IF(OR(Site_Use_Code__c = &quot;Bill To&quot;, Site_Use_Code__c = &quot;Bill_To&quot;, Site_Use_Code__c = &quot;BILL_TO&quot;), BillingState__c , ShippingState__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <formula>IF(OR(Site_Use_Code__c = &quot;Bill To&quot;, Site_Use_Code__c = &quot;Bill_To&quot;, Site_Use_Code__c = &quot;BILL_TO&quot;), BillingStreet__c, ShippingStreet__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>IF(OR(Site_Use_Code__c = &quot;Bill To&quot;, Site_Use_Code__c = &quot;Bill_To&quot;, Site_Use_Code__c = &quot;BILL_TO&quot;), Billing_Postal_Code__c  ,  ShippingZipCode__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Bill To &amp; Ship To</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Street_Address__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>BillingCity__c</columns>
        <columns>BillingCountry__c</columns>
        <columns>BillingState__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <nameField>
        <label>Bill To &amp; Ship To Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill Tos &amp; Ship Tos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>